--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>net.runeduniverse.hexsocket</groupId>
+	<groupId>net.runeduniverse</groupId>
 	<artifactId>hexagon</artifactId>
 	<version>0.1</version>
 	<packaging>pom</packaging>
