--- a/hexagon-core/pom.xml
+++ b/hexagon-core/pom.xml
@@ -14,6 +14,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>net.runeduniverse</groupId>
+			<artifactId>hexagon-api</artifactId>
+			<version>${parent.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>net.runeduniverse.libs</groupId>
 			<artifactId>utils</artifactId>
 		</dependency>
