--- a/hexagon-api/pom.xml
+++ b/hexagon-api/pom.xml
@@ -4,12 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>net.runeduniverse</groupId>
-		<artifactId>hexagon</artifactId>
+		<artifactId>hexagon-parent</artifactId>
 		<version>0.1</version>
 	</parent>
 
 	<artifactId>hexagon-api</artifactId>
-
 	<name>Hexagon-API</name>
 
 	<dependencies>
